This file documents the revision history for Perl extension Catalyst.

4.28  XXX XXX XX XX:00:00 2005
        - fixed isa tree (Christian Hansen)
        - Reworked documentation (Andrew Ford <A.Ford@ford-mason.co.uk>)

4.27  Sat Mar 19 01:00:00 2005
        - debug message for parameters
        - Fix redirects (Christian Hansen <ch@ngmedia.com>)
        - some random fixes
        - new helper api for Catalyst::Helper::* support
          you have to update script/create.pl to use it

4.26  Wed Mar 16 10:00:00 2005
        - fixed the weird bug that caused regex actions to fail on every
          second request
        - more debug messages
        - 100% pod coverage.

4.25  Sat Mar 12 18:00:00 2005
        - correct perl pathes for helper generated scripts (Tatsuhiko Miyagawa)
        - improved cgi engine docs (Christoper Hicks)

4.24  Sat Mar 12 01:00:00 2005
        - updated cookbook example  
        - fixed base for apache and https (Andrew Ruthven)
        
4.23  Wed Mar 09 20:00:00 2005
        - no more regex actions in forward
        - added support for test directories t/m, t/v and t/c

4.22  Tue Mar 08 20:00:00 2005
        - catch errors in application class
        - handle die properly.

4.21  Sat Mar 05 17:00:00 2005
        - fixed docs

4.20  Fri Mar 04 22:00:00 2005
        - moved bin to script

4.13  Thu Mar 03 11:00:00 2005
        - improved documentation
        - pod coverage test for helper generated apps
        - new helper api

4.12  Wed Mar 02 11:00:00 2005
        - server_base sucks, removed
        - added $c->log->dump()

4.11  Wed Mar 02 11:00:00 2005
        - removed some warnings
        - improved docs
        - private prefixed actions override private non prefixed actions
        - added server_base
        - updated Catalyst::Manual::Intro

4.10  Wed Mar 02 10:00:00 2005
        - improved documentation
        - fixed upload bug
        - fixed prefixed private actions bug
        - fixed more little bugs
